--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,34 +1,21 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog Chehine | <%= title %> </title>
-  </head>
-  <body>
-    <h1>Home</h1>
-    <h2>Your path to becoming a Node.js ninja!</h2>
-    <nav>
-      <div class="site-title">
-        <a href="/"><h1>Blog</h1></a>
-        <p>A WebSite</p>
-      </div>
-      <ul>
-        <li><a href="/">Blogs</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/blogs/create">New Blog</a></li>
-      </ul>
-    </nav>
-    <div class="create-blog content">
-        <form>
-            <label for="title">Blog title:</label>
-            <input type="text" id="title" required>
-            <label for="snippet">Blog snippet:</label>
-            <input type="text" id="snippet" required>
-            <label for="body">Blog body:</label>
-            <textarea id="body" required></textarea>
-            <button>Submit</button> 
-        </form>
-    </div>
+<%- include("./partials/head.ejs") %>
 
-  </body>
+<body>
+  <%- include("./partials/nav.ejs") %>
+
+  <div class="create-blog content">
+    <form>
+      <label for="title">Blog title:</label>
+      <input type="text" id="title" name="title" required>
+      <label for="snippet">Blog snippet:</label>
+      <input type="text" id="snippet" name="snippet" required>
+      <label for="body">Blog body:</label>
+      <textarea id="body" name="body" required></textarea>
+      <button>Submit</button>
+    </form>
+  </div>
+
+  <%- include("./partials/footer.ejs") %>
+</body>
 </html>
